--- a/main/templates/accounts/login.html
+++ b/main/templates/accounts/login.html
@@ -1,37 +1,50 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<section id="login" class="bg-light py-5">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6 mx-auto">
-          <div class="card">
-            <div class="card-header bg-primary text-white">
-              <h4>
-                <i class="fas fa-sign-in-alt"></i> Login</h4>
-            </div>
-            <div class="card-body">
-                <!-- Alerts -->
-                {% include 'partials/_alerts.html' %}
-                <form action="{% url 'login' %}" method="POST">
-                    {% csrf_token %}
-                <div class="form-group">
-                  <label for="username">Username</label>
-                  <input type="text" name="username" class="form-control" required>
-                </div>
+<div class="limiter">
+  <div class="container-login100" style="background-image: url('images/bg-01.jpg');">
+    <div class="wrap-login100 elementToFadeInAndOut">
+      <form class="login100-form validate-form" method="POST" autocomplete="off">
+        {% csrf_token %}
+        <span class="login100-form-logo">
+          <i class="zmdi zmdi-account"></i>
+        </span>
 
-                <div class="form-group">
-                  <label for="password2">Password</label>
-                  <input type="password" name="password" class="form-control" required>
-                </div>
+        <span class="login100-form-title p-b-34 p-t-27">
+          Log in
+        </span>
 
-                <input type="submit" value="Login" class="btn btn-secondary btn-block">
-              </form>
-            </div>
-          </div>
+        <div class="wrap-input100 validate-input" data-validate = "Enter Email Id">
+          <input class="input100" type="email" name="email" placeholder="Email Id" required>
+          <span class="focus-input100" data-placeholder="&#xf15a;"></span>
         </div>
-      </div>
+
+        <div class="wrap-input100 validate-input" data-validate="Enter password">
+          <input class="input100" type="password" name="password" placeholder="Password" required>
+          <span class="focus-input100" data-placeholder="&#xf191;"></span>
+        </div>
+
+        <div class="contact100-form-checkbox">
+          <input class="input-checkbox100" id="ckb1" type="checkbox" name="remember-me">
+          <label class="label-checkbox100" for="ckb1">
+            Remember me
+          </label>
+        </div>
+
+        <div class="container-login100-form-btn">
+          <button class="login100-form-btn">
+            Login
+          </button>
+        </div>
+
+        <div class="text-center p-t-90">
+          <a class="txt1" href="#">
+            Forgot Password?
+          </a>
+        </div>
+      </form>
     </div>
-  </section>
+  </div>
+</div>
 
 {% endblock %}
