--- a/main/templates/accounts/register.html
+++ b/main/templates/accounts/register.html
@@ -1,50 +1,54 @@
 {% extends 'base.html' %}
 
 {% block content %}
- <section id="register" class="bg-light py-5">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6 mx-auto">
-          <div class="card">
-            <div class="card-header bg-primary text-white">
-              <h4>
-                <i class="fas fa-user-plus"></i> Register</h4>
-            </div>
-            <div class="card-body">
-                <!-- Alerts -->
-                {% include 'partials/_alerts.html' %}
-                <form action="{% url 'register' %}" method="POST">
-                    {% csrf_token %}
-                  <div class="form-group">
-                  <label for="first_name">First Name</label>
-                  <input type="text" name="first_name" class="form-control" required>
-                </div>
-                <div class="form-group">
-                  <label for="last_name">Last Name</label>
-                  <input type="text" name="last_name" class="form-control" required>
-                </div>
-                <div class="form-group">
-                  <label for="username">Username</label>
-                  <input type="text" name="username" class="form-control" required>
-                </div>
-                <div class="form-group">
-                  <label for="email">Email</label>
-                  <input type="email" name="email" class="form-control" required>
-                </div>
-                <div class="form-group">
-                  <label for="password2">Password</label>
-                  <input type="password" name="password" class="form-control" required>
-                </div>
-                <div class="form-group">
-                  <label for="password">Confirm Password</label>
-                  <input type="password" name="password2" class="form-control" required>
-                </div>
-                <input type="submit" value="Register" class="btn btn-secondary btn-block">
-              </form>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
+
+	<div class="limiter">
+		<div class="container-login100" style="background-image: url('images/bg-01.jpg');">
+			<div class="wrap-login100 elementToFadeInAndOut">
+				<form class="login100-form validate-form" method="POST" autocomplete="off">
+					{% csrf_token %}
+					<span class="login100-form-logo">
+						<i class="zmdi zmdi-account-add"></i>
+					</span>
+
+					<span class="login100-form-title p-b-34 p-t-27">
+						Sign Up
+					</span>
+
+                    <div class="wrap-input100 validate-input" data-validate = "Enter First Name">
+						<input class="input100" type="text" name="first_name" placeholder="First Name" required>
+						<span class="focus-input100" data-placeholder="&#xf207;"></span>
+                    </div>
+                    
+                    <div class="wrap-input100 validate-input" data-validate = "Enter Last Name">
+						<input class="input100" type="text" name="last_name" placeholder="Last Name" required>
+						<span class="focus-input100" data-placeholder="&#xf206;"></span>
+					</div>
+                    
+					<div class="wrap-input100 validate-input" data-validate = "Enter Email id">
+						<input class="input100" type="email" name="email" placeholder="Email Id" required>
+						<span class="focus-input100" data-placeholder="&#xf15a;"></span>
+					</div>
+					<!-- Because chutiya Django needs username as part of the object being returned -->
+                    <input class="input100" type="hidden" name="username" placeholder="Username" value="nothing">
+
+					<div class="wrap-input100 validate-input" data-validate="Enter password">
+						<input class="input100" type="password" name="password1" placeholder="Password"  minlength="8" required>
+						<span class="focus-input100" data-placeholder="&#xf191;"></span>
+                    </div>
+                    
+                    <div class="wrap-input100 validate-input" data-validate="Enter password">
+						<input class="input100" type="password" name="password2" placeholder="Confirm Password"  minlength="8" required>
+						<span class="focus-input100" data-placeholder="&#xf190;"></span>
+					</div>
+
+					<div class="container-login100-form-btn">
+						<button class="login100-form-btn">
+							Sign Up
+						</button>
+					</div>
+				</form>
+			</div>
+		</div>
+	</div>
 {% endblock %}
