--- a/main/templates/home/index.html
+++ b/main/templates/home/index.html
@@ -38,7 +38,7 @@
 						<!-- Block2 -->
 						<div class="block2">
 							<div class="block2-img wrap-pic-w of-hidden pos-relative block2-labelnew">
-								<img src="static/images/item-02.jpg" alt="IMG-PRODUCT">
+								<img src="static/images/dell.jpg" alt="IMG-PRODUCT">
 
 								<div class="block2-overlay trans-0-4">
 									<a href="#" class="block2-btn-addwishlist hov-pointer trans-0-4">
@@ -71,7 +71,7 @@
 						<!-- Block2 -->
 						<div class="block2">
 							<div class="block2-img wrap-pic-w of-hidden pos-relative">
-								<img src="static/images/item-03.jpg" alt="IMG-PRODUCT">
+								<img src="static/images/jbl.jpg" alt="IMG-PRODUCT">
 
 								<div class="block2-overlay trans-0-4">
 									<a href="#" class="block2-btn-addwishlist hov-pointer trans-0-4">
