--- a/main/templates/home/index.html
+++ b/main/templates/home/index.html
@@ -104,7 +104,7 @@
 						<!-- Block2 -->
 						<div class="block2">
 							<div class="block2-img wrap-pic-w of-hidden pos-relative">
-								<img src="static/images/item-05.jpg" alt="IMG-PRODUCT">
+								<img src="static/images/laptop-sleeve.jpg" alt="IMG-PRODUCT">
 
 								<div class="block2-overlay trans-0-4">
 									<a href="#" class="block2-btn-addwishlist hov-pointer trans-0-4">
@@ -137,7 +137,7 @@
 						<!-- Block2 -->
 						<div class="block2">
 							<div class="block2-img wrap-pic-w of-hidden pos-relative block2-labelsale">
-								<img src="static/images/item-07.jpg" alt="IMG-PRODUCT">
+								<img src="static/images/s9.png" alt="IMG-PRODUCT">
 
 								<div class="block2-overlay trans-0-4">
 									<a href="#" class="block2-btn-addwishlist hov-pointer trans-0-4">
