--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -21,10 +21,13 @@
 
 	<link rel="stylesheet" type="text/css" href="fonts/iconic/css/material-design-iconic-font.min.css">
 <!--===============================================================================================-->
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Rokkitt&family=Poppins:wght@200;400&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 <!-- ===============================================================================================-->	
 
 <link rel="stylesheet" href="{% static 'css/accounts.css' %}">
+<link rel="stylesheet" href="{% static 'css/home.css' %}">
+
 <body>
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -34,6 +37,17 @@
     </button>
   
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav nav-center">
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'home' %}">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'home' %}">Products</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'home' %}">Sellers</a>
+          </li>
+      </ul>
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
           <a class="nav-link"  href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
