--- a/main/templates/home/index.html
+++ b/main/templates/home/index.html
@@ -57,7 +57,7 @@
 
 							<div class="block2-txt p-t-20">
 								<a href="product-detail.html" class="block2-name dis-block s-text3 p-b-5">
-									Herschel supply co 25l
+									Dell Inspiron
 								</a>
 
 								<span class="block2-price m-text6 p-r-5">
@@ -90,7 +90,7 @@
 
 							<div class="block2-txt p-t-20">
 								<a href="product-detail.html" class="block2-name dis-block s-text3 p-b-5">
-									Denim jacket blue
+									JBL earphones
 								</a>
 
 								<span class="block2-price m-text6 p-r-5">
@@ -156,7 +156,7 @@
 
 							<div class="block2-txt p-t-20">
 								<a href="product-detail.html" class="block2-name dis-block s-text3 p-b-5">
-									Frayed denim shorts
+									Samsung s9
 								</a>
 
 								<span class="block2-oldprice m-text7 p-r-5">
