--- a/main/templates/home/index.html
+++ b/main/templates/home/index.html
@@ -16,8 +16,8 @@
     <!--===============================================================================================-->
     <link rel="stylesheet" type="text/css" href="static/js/slick/slick.css">
 
-	<link rel="stylesheet" type="text/css" href="static/css/util.css">
-	<link rel="stylesheet" type="text/css" href="static/css/main.css">
+	<link rel="stylesheet" type="text/css" href="static/css/index/util.css">
+	<link rel="stylesheet" type="text/css" href="static/css/index/main.css">
 <!--===============================================================================================-->
 </head>
 
