--- a/main/templates/home/index.html
+++ b/main/templates/home/index.html
@@ -18,6 +18,8 @@
 
 	<link rel="stylesheet" type="text/css" href="static/css/index/util.css">
 	<link rel="stylesheet" type="text/css" href="static/css/index/main.css">
+	<link rel="stylesheet" type="text/css" href="static/css/accounts.css">
+	<link rel="stylesheet" type="text/css" href="static/css/home.css">
 <!--===============================================================================================-->
 </head>
 
