--- a/main/templates/home/index.html
+++ b/main/templates/home/index.html
@@ -18,8 +18,9 @@
 
 	<link rel="stylesheet" type="text/css" href="static/css/index/util.css">
 	<link rel="stylesheet" type="text/css" href="static/css/index/main.css">
-	<link rel="stylesheet" type="text/css" href="static/css/accounts.css">
-	<link rel="stylesheet" type="text/css" href="static/css/home.css">
+	<link rel="stylesheet" href="{% static 'css/accounts.css' %}">
+	<link rel="stylesheet" href="{% static 'css/home.css' %}">
+	
 <!--===============================================================================================-->
 </head>
 
@@ -67,7 +68,7 @@
 								<img src="static/images/dell.jpg" alt="IMG-PRODUCT">
 
 								<div class="block2-overlay trans-0-4">
-									<a href="#" class="block2-btn-addwishlist hov-pointer trans-0-4">
+									<a href="#" class="block2-btn-addwishlist hov-pointer trans-0-4 index_a">
 										<i class="icon-wishlist icon_heart_alt" aria-hidden="true"></i>
 										<i class="icon-wishlist icon_heart dis-none" aria-hidden="true"></i>
 									</a>
@@ -82,7 +83,7 @@
 							</div>
 
 							<div class="block2-txt p-t-20">
-								<a href="product-detail.html" class="block2-name dis-block s-text3 p-b-5">
+								<a href="product-detail.html" class="block2-name dis-block s-text3 p-b-5 index_a">
 									Dell Inspiron
 								</a>
 
@@ -100,7 +101,7 @@
 								<img src="static/images/jbl.jpg" alt="IMG-PRODUCT">
 
 								<div class="block2-overlay trans-0-4">
-									<a href="#" class="block2-btn-addwishlist hov-pointer trans-0-4">
+									<a href="#" class="block2-btn-addwishlist hov-pointer trans-0-4 index_a">
 										<i class="icon-wishlist icon_heart_alt" aria-hidden="true"></i>
 										<i class="icon-wishlist icon_heart dis-none" aria-hidden="true"></i>
 									</a>
@@ -133,7 +134,7 @@
 								<img src="static/images/laptop-sleeve.jpg" alt="IMG-PRODUCT">
 
 								<div class="block2-overlay trans-0-4">
-									<a href="#" class="block2-btn-addwishlist hov-pointer trans-0-4">
+									<a href="#" class="block2-btn-addwishlist hov-pointer trans-0-4 index_a">
 										<i class="icon-wishlist icon_heart_alt" aria-hidden="true"></i>
 										<i class="icon-wishlist icon_heart dis-none" aria-hidden="true"></i>
 									</a>
@@ -148,7 +149,7 @@
 							</div>
 
 							<div class="block2-txt p-t-20">
-								<a href="product-detail.html" class="block2-name dis-block s-text3 p-b-5">
+								<a href="product-detail.html" class="block2-name dis-block s-text3 p-b-5 index_a">
 									Coach slim easton black
 								</a>
 
@@ -166,7 +167,7 @@
 								<img src="static/images/s9.png" alt="IMG-PRODUCT">
 
 								<div class="block2-overlay trans-0-4">
-									<a href="#" class="block2-btn-addwishlist hov-pointer trans-0-4">
+									<a href="#" class="block2-btn-addwishlist hov-pointer trans-0-4 index_a">
 										<i class="icon-wishlist icon_heart_alt" aria-hidden="true"></i>
 										<i class="icon-wishlist icon_heart dis-none" aria-hidden="true"></i>
 									</a>
@@ -181,7 +182,7 @@
 							</div>
 
 							<div class="block2-txt p-t-20">
-								<a href="product-detail.html" class="block2-name dis-block s-text3 p-b-5">
+								<a href="product-detail.html" class="block2-name dis-block s-text3 p-b-5 index_a">
 									Samsung s9
 								</a>
 
@@ -203,7 +204,7 @@
 								<img src="static/images/item-02.jpg" alt="IMG-PRODUCT">
 
 								<div class="block2-overlay trans-0-4">
-									<a href="#" class="block2-btn-addwishlist hov-pointer trans-0-4">
+									<a href="#" class="block2-btn-addwishlist hov-pointer trans-0-4 index_a">
 										<i class="icon-wishlist icon_heart_alt" aria-hidden="true"></i>
 										<i class="icon-wishlist icon_heart dis-none" aria-hidden="true"></i>
 									</a>
@@ -218,7 +219,7 @@
 							</div>
 
 							<div class="block2-txt p-t-20">
-								<a href="product-detail.html" class="block2-name dis-block s-text3 p-b-5">
+								<a href="product-detail.html" class="block2-name dis-block s-text3 p-b-5 index_a">
 									Herschel supply co 25l
 								</a>
 
@@ -236,14 +237,14 @@
 								<img src="static/images/item-03.jpg" alt="IMG-PRODUCT">
 
 								<div class="block2-overlay trans-0-4">
-									<a href="#" class="block2-btn-addwishlist hov-pointer trans-0-4">
+									<a href="#" class="block2-btn-addwishlist hov-pointer trans-0-4 index_a">
 										<i class="icon-wishlist icon_heart_alt" aria-hidden="true"></i>
 										<i class="icon-wishlist icon_heart dis-none" aria-hidden="true"></i>
 									</a>
 
 									<div class="block2-btn-addcart w-size1 trans-0-4">
 										<!-- Button -->
-										<button class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4">
+										<button class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4 index_a">
 											Add to Cart
 										</button>
 									</div>
@@ -251,7 +252,7 @@
 							</div>
 
 							<div class="block2-txt p-t-20">
-								<a href="product-detail.html" class="block2-name dis-block s-text3 p-b-5">
+								<a href="product-detail.html" class="block2-name dis-block s-text3 p-b-5 index_a">
 									Denim jacket blue
 								</a>
 
@@ -269,7 +270,7 @@
 								<img src="static/images/item-05.jpg" alt="IMG-PRODUCT">
 
 								<div class="block2-overlay trans-0-4">
-									<a href="#" class="block2-btn-addwishlist hov-pointer trans-0-4">
+									<a href="#" class="block2-btn-addwishlist hov-pointer trans-0-4 index_a">
 										<i class="icon-wishlist icon_heart_alt" aria-hidden="true"></i>
 										<i class="icon-wishlist icon_heart dis-none" aria-hidden="true"></i>
 									</a>
@@ -284,7 +285,7 @@
 							</div>
 
 							<div class="block2-txt p-t-20">
-								<a href="product-detail.html" class="block2-name dis-block s-text3 p-b-5">
+								<a href="product-detail.html" class="block2-name dis-block s-text3 p-b-5 index_a">
 									Coach slim easton black
 								</a>
 
@@ -302,7 +303,7 @@
 								<img src="static/images/item-07.jpg" alt="IMG-PRODUCT">
 
 								<div class="block2-overlay trans-0-4">
-									<a href="#" class="block2-btn-addwishlist hov-pointer trans-0-4">
+									<a href="#" class="block2-btn-addwishlist hov-pointer trans-0-4 index_a">
 										<i class="icon-wishlist icon_heart_alt" aria-hidden="true"></i>
 										<i class="icon-wishlist icon_heart dis-none" aria-hidden="true"></i>
 									</a>
@@ -317,7 +318,7 @@
 							</div>
 
 							<div class="block2-txt p-t-20">
-								<a href="product-detail.html" class="block2-name dis-block s-text3 p-b-5">
+								<a href="product-detail.html" class="block2-name dis-block s-text3 p-b-5 index_a">
 									Frayed denim shorts
 								</a>
 
@@ -355,13 +356,13 @@
 				<div class="col-sm-10 col-md-4 p-b-30 m-l-r-auto">
 					<!-- Block3 -->
 					<div class="block3">
-						<a href="blog-detail.html" class="block3-img dis-block hov-img-zoom">
+						<a href="blog-detail.html" class="block3-img dis-block hov-img-zoom index_a">
 							<img src="static/images/blog-01.jpg" alt="IMG-BLOG">
 						</a>
 
 						<div class="block3-txt p-t-14">
 							<h4 class="p-b-7">
-								<a href="blog-detail.html" class="m-text11">
+								<a href="blog-detail.html" class="m-text11 index_a">
 									Black Friday Guide: Best Sales & Discount Codes
 								</a>
 							</h4>
@@ -380,13 +381,13 @@
 				<div class="col-sm-10 col-md-4 p-b-30 m-l-r-auto">
 					<!-- Block3 -->
 					<div class="block3">
-						<a href="blog-detail.html" class="block3-img dis-block hov-img-zoom">
+						<a href="blog-detail.html" class="block3-img dis-block hov-img-zoom index_a">
 							<img src="static/images/blog-03.jpg" alt="IMG-BLOG">
 						</a>
 
 						<div class="block3-txt p-t-14">
 							<h4 class="p-b-7">
-								<a href="blog-detail.html" class="m-text11">
+								<a href="blog-detail.html" class="m-text11 index_a">
 									New York SS 2018 Street Style: Annina Mislin
 								</a>
 							</h4>
@@ -414,7 +415,7 @@
 					Free Delivery Worldwide
 				</h4>
 
-				<a href="#" class="s-text11 t-center">
+				<a href="#" class="s-text11 t-center index_a">
 					Click here for more info
 				</a>
 			</div>
@@ -456,11 +457,11 @@
 					</p>
 
 					<div class="flex-m p-t-30">
-						<a href="#" class="fs-18 color1 p-r-20 fa fa-facebook"></a>
-						<a href="#" class="fs-18 color1 p-r-20 fa fa-instagram"></a>
-						<a href="#" class="fs-18 color1 p-r-20 fa fa-pinterest-p"></a>
-						<a href="#" class="fs-18 color1 p-r-20 fa fa-snapchat-ghost"></a>
-						<a href="#" class="fs-18 color1 p-r-20 fa fa-youtube-play"></a>
+						<a href="#" class="fs-18 color1 p-r-20 fa fa-facebook index_a"></a>
+						<a href="#" class="fs-18 color1 p-r-20 fa fa-instagram index_a"></a>
+						<a href="#" class="fs-18 color1 p-r-20 fa fa-pinterest-p index_a"></a>
+						<a href="#" class="fs-18 color1 p-r-20 fa fa-snapchat-ghost index_a"></a>
+						<a href="#" class="fs-18 color1 p-r-20 fa fa-youtube-play index_a"></a>
 					</div>
 				</div>
 			</div>
@@ -472,19 +473,19 @@
 
 				<ul>
 					<li class="p-b-9">
-						<a href="#" class="s-text7">Search</a>
+						<a href="#" class="s-text7 index_a">Search</a>
 					</li>
 
 					<li class="p-b-9">
-						<a href="#" class="s-text7">About Us</a>
+						<a href="#" class="s-text7 index_a">About Us</a>
 					</li>
 
 					<li class="p-b-9">
-						<a href="#" class="s-text7">Contact Us</a>
+						<a href="#" class="s-text7 index_a">Contact Us</a>
 					</li>
 
 					<li class="p-b-9">
-						<a href="#" class="s-text7">Returns</a>
+						<a href="#" class="s-text7 index_a">Returns</a>
 					</li>
 				</ul>
 			</div>
@@ -494,15 +495,15 @@
 
 				<ul>
 					<li class="p-b-9">
-						<a href="#" class="s-text7">Track Order</a>
+						<a href="#" class="s-text7 index_a">Track Order</a>
 					</li>
 
 					<li class="p-b-9">
-						<a href="#" class="s-text7">Returns</a>
+						<a href="#" class="s-text7 index_a">Returns</a>
 					</li>
 
 					<li class="p-b-9">
-						<a href="#" class="s-text7">Shipping</a>
+						<a href="#" class="s-text7 index_a">Shipping</a>
 					</li>
 				</ul>
 			</div>
