removed tags from index.html

--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -24,9 +24,14 @@
 <link href="https://fonts.googleapis.com/css2?family=Rokkitt&family=Poppins:wght@200;400&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 <!-- ===============================================================================================-->	
-
-<link rel="stylesheet" href="{% static 'css/accounts.css' %}">
-<link rel="stylesheet" href="{% static 'css/home.css' %}">
+<!--===============================================================================================-->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css">
+<!--===============================================================================================-->
+<link rel="stylesheet" type="text/css" href="static/js/slick/slick.css">
+<link rel="stylesheet" type="text/css" href="static/css/index/util.css">
+	<link rel="stylesheet" type="text/css" href="static/css/index/main.css">
+	<link rel="stylesheet" href="{% static 'css/accounts.css' %}">
+	<link rel="stylesheet" href="{% static 'css/home.css' %}">
 
 <body>
 
