--- a/main/static/css/index/main.css
+++ b/main/static/css/index/main.css
@@ -9,13 +9,13 @@
 
 body, html {
 	height: 100%;
-	font-family: Montserrat-Regular, sans-serif;
+	font-family: Montserrat, sans-serif;
   font-weight: 400;
 }
 
 /* ------------------------------------ */
 .index_a {
-	font-family: Montserrat-Regular;
+	font-family: Montserrat;
   font-weight: 400;
 	font-size: 15px;
 	line-height: 1.7;
@@ -42,7 +42,7 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 p {
-	font-family: Montserrat-Regular;
+	font-family: Montserrat;
 	font-size: 15px;
 	line-height: 1.7;
 	color: #888888;
@@ -222,7 +222,7 @@ iframe {
 .block2-labelnew::before 
 {
   z-index: 100;
-  font-family: Montserrat-Regular;
+  font-family: Montserrat;
   font-size: 12px;
   color: white;
   display: -webkit-box;
