--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -19,8 +19,9 @@
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
 <!-- FontAwesome CDN -->
-<!--<script src="https://kit.fontawesome.com/f52abb8c88.js" crossorigin="anonymous"></script>-->
+<script src="https://kit.fontawesome.com/f52abb8c88.js" crossorigin="anonymous"></script>
 <script src="https://kit.fontawesome.com/6653ca49be.js" crossorigin="anonymous"></script>
+
 <!-- Material Icons -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css">
   
