--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -7,7 +7,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- Favicon -->
-  <link rel="icon" type="image/png" href="images/icons/favicon.ico"/>
+<link rel="icon" type="image/png" href="images/icons/favicon.ico"/>
   
 <!-- bootstrap CDNs -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
@@ -35,7 +35,7 @@
 <link rel="stylesheet" type="text/css" href="static/css/index/main.css">
 <link rel="stylesheet" type="text/css" href="{% static 'css/accounts.css' %}">
 <link rel="stylesheet" type="text/css" href="{% static 'css/home.css' %}">
-
+</head>
 <body>
 
   <nav class="navbar navbar-expand-lg navbar-light bg6">
