--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -58,7 +58,7 @@
       </ul>
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link"  href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link"  href="{% url 'index' %}">Home <span class="sr-only">(current)</span></a>
         </li>
         {% if user.is_authenticated %}
         <li class="nav-item">
