--- a/main/templates/products/view_products.html
+++ b/main/templates/products/view_products.html
@@ -34,39 +34,39 @@
   <section id="listings" class="py-4">
     <div class="container">
       <div class="row">
-        {% if listings %}
-          {% for listing in listings %}
+        {% if products %}
+          {% for product in products %}
             <div class="col-md-6 col-lg-4 mb-4">
               <div class="card listing-preview">
-                <img class="card-img-top" src="{{ listing.photo_main.url }}" height="250" alt="">
+                <img class="card-img-top" src="{{ product.photo_main.url }}" height="250" alt="">
                 <div class="card-img-overlay">
                   <h2>
-                    <span class="badge badge-secondary text-white">₹{{ listing.price | intcomma }}</span>
+                    <span class="badge badge-secondary text-white">₹{{ product.price | intcomma }}</span>
                   </h2>
                 </div>
                 <div class="card-body">
                   <div class="listing-heading text-center">
-                    <h4 class="text-primary">{{ listing.name }}</h4>
+                    <h4 class="text-primary">{{ product.name }}</h4>
                     <p>
-                      <i class="fab fa-reddit-alien text-secondary"></i> {{ listing.type }}, {{ listing.sub_type }}</p>
+                      <i class="fab fa-reddit-alien text-secondary"></i> {{ product.category }}</p>
                   </div>
                   <div class="row py-2 text-secondary">
                     <div class="col-12">
-                      <i class="fas fa-registered"></i> {{ listing.brand }}</div>
+                      <i class="fas fa-registered"></i> {{ product.brand }}</div>
                   </div>
                   <div class="row text-secondary pb-2">
                     <div class="col-6">
-                      <i class="fas fa-clock"></i> {{ listing.list_date | timesince }}</div>
+                      <i class="fas fa-clock"></i> {{ product.list_date | timesince }}</div>
                   </div>
                   <hr>
-                  <a href="{% url 'listing' listing.id %}" class="btn btn-primary btn-block">More Info</a>
+                  <a href="{% url 'product' product.id %}" class="btn btn-primary btn-block">More Info</a>
                 </div>
               </div>
             </div>
           {% endfor %}
         {% else %}
           <div class="col-md-12">
-            <p>No Listing Available.</p>
+            <p>No Product Available.</p>
           </div>
         {% endif %}
 
@@ -74,19 +74,19 @@
 
       <div class="row">
         <div class="col-md-12">
-          {% if listings.has_other_pages %}
+          {% if products.has_other_pages %}
           <ul class="pagination">
-            {% if listings.has_previous %}
+            {% if products.has_previous %}
               <li class="page-item">
-                <a href="?page={{listings.previous_page_number}}" class="page-link">&laquo;</a>
+                <a href="?page={{products.previous_page_number}}" class="page-link">&laquo;</a>
               </li>
             {% else %}
               <li class="page-item disabled">
                 <a class="page-link">&laquo;</a>
               </li>
             {% endif %}
-            {% for i in listings.paginator.page_range %}
-              {% if listings.number == i %}
+            {% for i in products.paginator.page_range %}
+              {% if products.number == i %}
                 <li class="page-item active">
                   <a class="page-link">{{i}}</a>
                 </li>
@@ -96,9 +96,9 @@
                 </li>
               {% endif %}
             {% endfor %}
-            {% if listings.has_next %}
+            {% if products.has_next %}
               <li class="page-item">
-                <a href="?page={{listings.next_page_number}}" class="page-link">&raquo;</a>
+                <a href="?page={{products.next_page_number}}" class="page-link">&raquo;</a>
               </li>
             {% else %}
               <li class="page-item disabled">
