--- a/main/templates/products/view_products.html
+++ b/main/templates/products/view_products.html
@@ -63,6 +63,9 @@
                 </div>
               </div>
             </div>
+            <!-- display more details using variable {{product.is_available}}-->
+            <!-- the other variables such as {{product.specification}} and {{product.seller}} can be added in "more info" page
+            right now that button aint working. once it works it can be added there -->
           {% endfor %}
         {% else %}
           <div class="col-md-12">
