--- a/main/static/css/accounts.css
+++ b/main/static/css/accounts.css
@@ -108,6 +108,9 @@ iframe {
 }
 
 /* Navbar Settings */
+.bg6 {
+  background-color: #f0f0f0;
+}
 
 .navbar-light .navbar-nav .nav-link {
   color:#353535;
