--- a/main/templates/products/view_products.html
+++ b/main/templates/products/view_products.html
@@ -1,9 +1,30 @@
 {% extends 'base.html' %}
 
 {% load humanize %}
-
+{% load static %}
 {% block content %}
-
+<!-- Deals Carousel -->
+<section id="carousel">
+	<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+		<div class="carousel-inner">
+		  <div class="carousel-item active">
+			<img src="{% static 'img/iphone_deals.jpeg' %}" class="product-carousel" alt="Electronic Deals">
+		  </div>
+		  <div class="carousel-item">
+			<img src="{% static 'img/samsung.png' %}" class="product-carousel" alt="Iphone Deals">
+		  </div>
+		</div>
+		<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+		  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+		  <span class="sr-only">Previous</span>
+		</a>
+		<a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+		  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+		  <span class="sr-only">Next</span>
+		</a>
+    </div>
+    
+</section>
   <section id="showcase-inner" class="py-5 text-white">
     <div class="container">
       <div class="row text-center">
