--- a/main/templates/home/index.html
+++ b/main/templates/home/index.html
@@ -34,43 +34,51 @@
     <div class="container">
         <h3 class="text-center mb-3">Latest Products</h3>
         <div class="row">
-            {% if products %}
-				{% for product in products %}
-				<div class="col-md-6 col-lg-4 mb-4">
-					<div class="card listing-preview">
-						<img class="card-img-top" src="{{ product.photo_main.url }}" height="300" alt="">
-						<div class="card-img-overlay">
-							<h2><span class="badge badge-secondary text-white">${{ product.price }}</span></h2>
-						</div>
-						<div class="card-body">
-							<div class="listing-heading text-center">
-								<h4 class="text-primary">{{ product.name }}</h4>
-								<p><i class="fab fa-reddit-alien text-secondary"></i> {{ product.type }} </p>
-							</div>
-								
-							<div class="row py-2 text-secondary">
-								<div class="col-6">
-									<i class="fas fa-registered"></i> {{ product.brand }}
+			<div class="wrap-slick2">
+				<div class="slick2">
+            		{% if products %}
+					{% for product in products %}
+						<div class="item-slick2 p-l-15 p-r-15">
+							<!-- Block2 -->
+							<div class="block2">
+								<div class="block2-img wrap-pic-w of-hidden pos-relative block2-label new">
+									<img src="{{ product.photo_main.url }}" alt="IMG-PRODUCT" height="250" width="200">
+						
+									<div class="block2-overlay trans-0-4">
+										<a href="#" class="block2-btn-addwishlist hov-pointer trans-0-4 index_a">
+											<i class="icon-wishlist icon_heart_alt" aria-hidden="true"></i>
+											<i class="icon-wishlist icon_heart dis-none" aria-hidden="true"></i>
+										</a>
+						
+										<div class="block2-btn-addcart w-size1 trans-0-4">
+											<!-- Button -->
+											<button class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4">
+												Add to Cart
+											</button>
+										</div>
+									</div>
+								</div>
+						
+								<div class="block2-txt p-t-20">
+									<a href="{% url 'product' product.id %}" class="block2-name dis-block s-text3 p-b-5 index_a">
+										{{ product.name }}
+									</a>
+									
+									<span class="block2-price m-text6 p-r-5">
+										₹{{ product.price }}
+									</span>
 								</div>
 							</div>
-							
-							<div class="row text-secondary pb-2">
-								<div class="col-6">
-									<i class="fas fa-clock"></i> {{ product.list_date | timesince }}
-								</div>
-							</div>
-												
-							<hr>
-							<a href="{% url 'product' product.id %}" class="btn btn-primary btn-block">More Info</a>
 						</div>
+					{% endfor %}
+           	 		{% else %}
+					<div class="col-md-12">
+						<p>No Listings Available</p>
 					</div>
+					{% endif %}
 				</div>
-				{% endfor %}
-            {% else %}
-                <div class="col-md-12">
-                    <p>No Listings Available</p>
-                </div>
-            {% endif %}
+			</div>
+		
         </div>
     </div>
 </section> 
