Products search criterias

--- a/main/static/css/accounts.css
+++ b/main/static/css/accounts.css
@@ -39,7 +39,7 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 p {
-    font-family: 'Poppins', sans-serif;
+    font-family: 'montserrat', sans-serif;
     font-size: 14px;
     line-height: 1.7;
     color: #666666;
