--- a/main/static/css/home.css
+++ b/main/static/css/home.css
@@ -71,3 +71,76 @@ footer{
     text-align: center;
     padding: 30px;
 }
+
+/* Product Filter Section */
+
+#products .container{
+    margin: 40px auto;
+}
+
+.inner-addon {
+    position: relative;
+}
+  
+.inner-addon .glyphicon {
+    position: absolute;
+    padding: 10px;
+    pointer-events: none;
+}
+
+.right-addon .glyphicon { 
+    right: 0px;
+    top: 2px;
+}
+ 
+.right-addon input { 
+    padding-right: 30px; 
+}
+
+.form-control:focus {
+    border-color: #ffffff;
+    box-shadow: 0 0 0 0.2rem rgba(117, 114, 114, 0.301);
+}
+
+.form-control{
+    border-radius: 1rem;
+}
+
+/* Slider */
+.slidecontainer {
+    width: 100%;
+  }
+  
+  .slider {
+    -webkit-appearance: none;
+    width: 100%;
+    height: 8px;
+    border-radius: 5px;
+    background: #252525;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+  }
+  
+  .slider:hover {
+    opacity: 1;
+  }
+  
+  .slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 18px;
+    height: 18px;
+    border-radius: 50%;
+    background: #d3d3d3;
+    cursor: pointer;
+  }
+  
+  .slider::-moz-range-thumb {
+    width: 18px;
+    height: 18px;
+    border-radius: 50%;
+    background: #4CAF50;
+    cursor: pointer;
+  }
