--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -24,7 +24,14 @@
 
 <!-- Material Icons -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css">
-  
+
+<!-- NoUi Slider -->
+<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/14.6.0/nouislider.min.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/14.6.0/nouislider.min.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/wnumb/1.2.0/wNumb.min.js"></script> -->
+
 <!-- Google Fonts -->
 <link href="https://fonts.googleapis.com/css2?family=Rokkitt&family=Poppins:wght@200;400&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
@@ -35,6 +42,10 @@
 <link rel="stylesheet" type="text/css" href="static/css/index/main.css">
 <link rel="stylesheet" type="text/css" href="{% static 'css/accounts.css' %}">
 <link rel="stylesheet" type="text/css" href="{% static 'css/home.css' %}">
+<style>
+  
+</style>
+
 </head>
 <body>
 
