--- a/main/static/css/home.css
+++ b/main/static/css/home.css
@@ -116,7 +116,7 @@ footer{
     width: 100%;
     height: 8px;
     border-radius: 5px;
-    background: #252525;
+    background: #353535;
     outline: none;
     opacity: 0.7;
     -webkit-transition: .2s;
@@ -143,4 +143,9 @@ footer{
     border-radius: 50%;
     background: #4CAF50;
     cursor: pointer;
+  }
+
+  .fa-filter{
+      padding-top: 12px;
+      color: #353535;
   }
