--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -60,29 +60,65 @@
           <li class="nav-item">
             <a class="nav-link" href="#about">About</a>
           </li>
-          <li class="nav-item">
+          <li 
+          {% if 'products' == request.path %}
+            class="nav-item active"
+          {% else %}
+            class="nav-item"
+          {% endif %}
+          >
             <a class="nav-link" href="{% url 'products' %}">Products</a>
           </li>
-          <li class="nav-item">
+          <li 
+          {% if 'index' == request.path %}
+            class="nav-item active"
+          {% else %}
+            class="nav-item"
+          {% endif %}
+          >
             <a class="nav-link" href="{% url 'index' %}">Sellers</a>
           </li>
       </ul>
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
+        <li 
+          {% if 'index' == request.path %}
+            class="nav-item active"
+          {% else %}
+            class="nav-item"
+          {% endif %}
+          >
           <a class="nav-link"  href="{% url 'index' %}">Home <span class="sr-only">(current)</span></a>
         </li>
         {% if user.is_authenticated %}
-        <li class="nav-item">
+        <li 
+          {% if 'register' == request.path %}
+            class="nav-item active"
+          {% else %}
+            class="nav-item"
+          {% endif %}
+          >
          <a class="nav-link headers" href="{% url 'register' %}">{{ user.first_name}} {{ user.last_name}} </a>
         </li>
         <li class="nav-item">
           <a class="nav-link headers" href="{% url 'logout' %}"><i class="zmdi zmdi-sign-in"></i>  Log Out</a>
         </li>
         {% else %}
-          <li class="nav-item">
+        <li 
+        {% if 'register' == request.path %}
+          class="nav-item active"
+        {% else %}
+          class="nav-item"
+        {% endif %}
+        >
             <a class="nav-link" href="{% url 'register' %}">Sign-Up</a>
           </li>
-          <li class="nav-item">
+          <li 
+          {% if 'login' == request.path %}
+            class="nav-item active"
+          {% else %}
+            class="nav-item"
+          {% endif %}
+          >
             <a class="nav-link"  href="{% url 'login' %}">Log In</a>
          </li>
         {% endif %}
@@ -104,6 +140,16 @@
 		<div class="copyrights">
 			<p>© 2020 Anu and Sanjay</p>
 		</div>
-	</footer>
+  </footer>
+  <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+  <script>
+    $(function(){
+        $('a').each(function(){
+            if ($(this).prop('href') == window.location.href) {
+                $(this).addClass('active'); $(this).parents('li').addClass('active');
+            }
+        });
+    });
+</script>
 </body>
 </html>
