Refactored carousel button and images

--- a/main/templates/products/view_products.html
+++ b/main/templates/products/view_products.html
@@ -8,7 +8,7 @@
 	<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
 		<div class="carousel-inner">
 		  <div class="carousel-item active">
-			<img src="{% static 'img/iphone_deals.jpeg' %}" class="product-carousel" alt="Electronic Deals">
+			<img src="{% static 'img/iphone_deals.jpg' %}" class="product-carousel" alt="Electronic Deals">
 		  </div>
 		  <div class="carousel-item">
 			<img src="{% static 'img/samsung.png' %}" class="product-carousel" alt="Iphone Deals">
