--- a/main/templates/products/search.html
+++ b/main/templates/products/search.html
@@ -3,90 +3,9 @@
 {% load humanize %}
 
 {% block content %}
-<section id="showcase-inner" class="showcase-search text-white py-5">
-  <div class="container">
-    <div class="row text-center">
-      <div class="col-md-12">
-        <form action="{% url 'search' %}">
-          
-            <div class="col-md-4 mb-3">
-              <label class="sr-only">Keywords</label>
-              <input type="text" name="keywords" class="form-control" placeholder="Keyword (Fastest, Smartest, etc)" vlaue="{{ values.keywords }}">
-            </div>
 
-            <div class="col-md-4 mb-3">
-              <label class="sr-only">Type</label>
-              <select name="type" class="form-control">
-                <option selected="true" disabled="disabled">Category (All)</option>
-                {% for key, value in type_choices.items %}
-                    <option value="{{ key }}"
-                    {% if key == values.type %}
-                      selected
-                    {% endif %}
-                    >{{value}}</option>
-                  {% endfor %}
-              </select>
-            </div>
-
-
-          <!-- Brand -->
-          <div class="col-md-3">
-            <div class="form-group">
-              <select name="brand" class="form-control" id="sel1">
-                <option selected="true" disabled="disabled">Brands</option>
-                {% for key, value in brand_choices.items %}
-                  <option class="decorated" value="{{ key }}"
-                  {% if key == values.brand %}
-                    selected
-                  {% endif %}
-                  >{{value}}</option>
-                {% endfor %}
-              </select>
-            </div>
-          </div>
-
-
-      <!-- Price -->
-      <div class="col-md-3">
-        <div class="row">
-          <div class="col-md-9 col-sm-9">
-            <div class="slidecontainer">
-              <input type="range" name="price" min="400" max="200400"  class="slider" id="myRange" step="1000" value="{{ values.price }}" >
-              <h6>Price: ₹<span id="demo"></span></h6>
-            </div>
-          </div>
-        </div>
-        
-      </div>
-
-          
-          <button type="submit" class="fas fa-filter fa-lg"></button>
-        </form>
-      </div>
-    </div>
-  </div>
-</section>
-
-
-
-  
-  <!-- Breadcrumb -->
-  <section id="bc" class="mt-3">
-    <div class="container">
-      <nav aria-label="breadcrumb">
-        <ol class="breadcrumb">
-          <li class="breadcrumb-item">
-            <a href="index.html">
-              <i class="fas fa-home"></i> Home</a>
-          </li>
-          <li class="breadcrumb-item">
-            <a href="products.html">Browse Listings</a>
-          </li>
-          <li class="breadcrumb-item active"> Search Results</li>
-        </ol>
-      </nav>
-    </div>
-  </section>
+<!-- Search Bar -->
+{% include 'shared/filterbar.html' %}
 
   <!-- Listings -->
   <section id="listings" class="py-4">
@@ -138,5 +57,13 @@
       </div>
     </div>
   </section>
-
+  <script>
+    var slider = document.getElementById("myRange");
+    var output = document.getElementById("demo");
+    output.innerHTML = slider.value;
+    
+    slider.oninput = function() {
+      output.innerHTML = this.value;
+    }
+    </script>
 {% endblock %}
