--- a/main/templates/shared/filterbar.html
+++ b/main/templates/shared/filterbar.html
@@ -6,11 +6,11 @@
         <div class="col-md-3">
           <form action="{% url 'search' %}">
           <div class="form-group">
-            <select name="type" class="form-control" id="sel1">
+            <select name="category" class="form-control" id="sel1">
               <option selected="true" disabled="disabled">Category</option>
               {% for key, value in type_choices.items %}
               <option class="decorated" value="{{ key }}" 
-                {% if key == values.type %}
+                {% if key == values.category %}
                   selected
                 {% endif %}
               >{{ value }}</option>
@@ -36,7 +36,7 @@
           <div class="form-group filter">
             <div class="inner-addon right-addon">
               <button type="button" class="fas fa-search glyphicon"></button>
-              <input type="text" name="keywords"class="form-control" placeholder="Search" value="{{ values.keywords }}">
+              <input type="text" name="search"class="form-control" placeholder="Search" value="{{ values.search }}">
             </div>
           </div>
         </div>
@@ -45,11 +45,11 @@
             <div class="col-md-9 col-sm-9">
               <div class="slidecontainer">
                 <input type="range" name="price" min="400" max="200400" value="200000" class="slider" id="myRange" step="1000" value="{{ values.price }}" >
-                <h6>Price: ₹<span id="demo"></span></h6>
+                <h6>Price: ₹<span id="price"></span></h6>
               </div>
             </div>
             <div class="col-md-3 col-sm-3">
-              <button type="submit" class="fas fa-filter fa-lg"></button>
+              <button type="submit" class="fas fa-filter fa-lg"><p>Filter</p></button>
             </div>
           </div>
           
@@ -60,3 +60,12 @@
     </div>
     
   </section>
+  <script>
+    var slider = document.getElementById("myRange");
+    var output = document.getElementById("price");
+    output.innerHTML = slider.value;
+    
+    slider.oninput = function() {
+      output.innerHTML = this.value;
+    }
+    </script>
