Added new shpping cart app

--- a/main/static/css/home.css
+++ b/main/static/css/home.css
@@ -6,9 +6,10 @@
     text-align: center;
 }
 
-.carouselButton{
+/* .carouselButton{
     
-}
+} */
+
 .carousel-control-prev-icon{
     position: absolute;
     left: 2rem;
