--- a/main/templates/home/index.html
+++ b/main/templates/home/index.html
@@ -66,8 +66,8 @@
 			</div>
 			{% endfor %}
            		{% else %}
-					<div class="col-md-12">
-						<p>No Listings Available</p>
+					<div class="col-md-12 text-center">
+						<h4>No Products Available.</h4>
 					</div>
 			{% endif %}
 		</div>
