--- a/main/templates/products/view_products.html
+++ b/main/templates/products/view_products.html
@@ -65,8 +65,8 @@
             
           {% endfor %}
         {% else %}
-          <div class="col-md-12">
-            <p>No Product Available.</p>
+          <div class="col-md-12 text-center">
+            <h5>No Products Available.</h5>
           </div>
         {% endif %}
 
