fixed products page animation

--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -19,7 +19,7 @@
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
 <!-- FontAwesome CDN -->
-<!--<script src="https://kit.fontawesome.com/f52abb8c88.js" crossorigin="anonymous"></script>-->
+<script src="https://kit.fontawesome.com/f52abb8c88.js" crossorigin="anonymous"></script>
 <script src="https://kit.fontawesome.com/6653ca49be.js" crossorigin="anonymous"></script>
 
 <!-- Material Icons -->
@@ -30,14 +30,11 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 
 <!-- Local js and CSS files -->
-<link rel="stylesheet" type="text/css" href="static/js/slick/slick.css">
-<link rel="stylesheet" type="text/css" href="static/css/index/util.css">
-<link rel="stylesheet" type="text/css" href="static/css/index/main.css">
+<link rel="stylesheet" type="text/css" href="{% static 'js/slick/slick.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'css/index/util.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'css/index/main.css' %}">
 <link rel="stylesheet" type="text/css" href="{% static 'css/accounts.css' %}">
 <link rel="stylesheet" type="text/css" href="{% static 'css/home.css' %}">
-<style>
-  
-</style>
 
 </head>
 <body>
