--- a/main/templates/shared/filterbar.html
+++ b/main/templates/shared/filterbar.html
@@ -33,7 +33,7 @@
             </div>
         </div>
         <div class="col-md-3">
-          <div class="form-group filter">
+          <div class="form-group">
             <div class="inner-addon right-addon">
               <button type="button" class="fas fa-search glyphicon"></button>
               <input type="text" name="search"class="form-control" placeholder="Search" value="{{ values.search }}">
