--- a/main/templates/products/view_products.html
+++ b/main/templates/products/view_products.html
@@ -38,7 +38,7 @@
           
             <div class="col-md-6 col-lg-4 mb-4">
               <div class="block2-img wrap-pic-w of-hidden pos-relative block2-label new">
-                <img src="{{ product.photo_main.url }}" alt="IMG-PRODUCT" height="250" width="200">
+                <img src="{{ product.image.url }}" alt="IMG-PRODUCT" height="250" width="200">
           
                 <div class="block2-overlay trans-0-4">
                   <a href="#" class="block2-btn-addwishlist hov-pointer trans-0-4 index_a">
