--- a/main/static/css/index/main.css
+++ b/main/static/css/index/main.css
@@ -379,27 +379,27 @@ iframe {
 }
 
 .table-shopping-cart .column-1 {
-  width: 225px;
-  padding-left: 50px;
+  /* width: 225px;
+  padding-left: 50px; */
 }
 .table-shopping-cart .column-2 {
   width: 330px;
-  padding-right: 30px;
+  /* padding-right: 30px; */
 }
 .table-shopping-cart .column-3 {
   width: 133px;
-  padding-right: 30px;
+  /* padding-right: 30px; */
 }
 .table-shopping-cart .column-4 {
   width: 355px;
-  padding-right: 30px;
+  /* padding-right: 30px; */
 }
 .table-shopping-cart .column-5 {
-  padding-right: 30px;
+  /* padding-right: 30px; */
 }
 
 .table-shopping-cart .table-head th {
-  font-family: Montserrat-Bold;
+  font-family: Montserrat;
   font-size: 13px;
   color: #555555;
   line-height: 1.5;
@@ -409,7 +409,7 @@ iframe {
 }
 
 .table-shopping-cart td {
-  font-family: Montserrat-Regular;
+  font-family: Montserrat;
   font-size: 16px;
   color: #555555;
   line-height: 1.5;
@@ -429,10 +429,11 @@ iframe {
 }
 
 .cart-img-product img {
-  width: 100%;
+  width: 90%;
+  margin-left: 60%;
 }
 
-.cart-img-product::after {
+/* .cart-img-product::after {
   content: '\e870';
   font-family: Linearicons;
   font-size: 16px;
@@ -455,7 +456,7 @@ iframe {
   -o-transition: all 0.3s;
   -moz-transition: all 0.3s;
   opacity: 0;
-}
+} */
 
 .cart-img-product:hover:after {
   cursor: pointer;
