--- a/main/templates/shoppingcart/cart_display.html
+++ b/main/templates/shoppingcart/cart_display.html
@@ -7,7 +7,7 @@
 {% block content %}
 <!-- Cart Detail: -->
 <br>
-<section class="cart bgwhite p-t-70 p-b-100">
+<section class="cart bgwhite p-b-100  text-center">
     <div class="container">
     <div class="container-table-cart pos-relative">
         <div class="wrap-table-shopping-cart bgwhite">
@@ -16,7 +16,7 @@
                     <th class="column-1"></th>
                     <th class="column-2">Product</th>
                     <th class="column-3">Price</th>
-                    <th class="column-4 p-l-70">Quantity</th>
+                    <th class="column-4">Quantity</th>
                     <th class="column-5">Total</th>
                 </tr>
                 {% for key,value in request.session.cart.items %}
@@ -26,166 +26,81 @@
                             <img src="{{ value.image }}" alt="IMG-PRODUCT">
                         </div>
                     </td>
-                    <td class="column-2">{{value.name}}</td>
-                    <td class="column-3">₹ {{value.price}}</td>
+                    <td class="column-2" scope="row">{{value.name}}</td>
+                    <td class="column-3">₹ {{value.price | intcomma}}</td>
                     <td class="column-4">
-                        <div class="flex-w bo5 of-hidden w-size17">
-                            <button class="btn-num-product-down color1 flex-c-m size7 bg8 eff2">
-                                <i class="fs-12 fa fa-minus" aria-hidden="true"></i>
-                            </button>
-
-                            <input class="size8 m-text18 t-center num-product" type="number" name="num-product1" value="{{value.quantity}}">
-
-                            <button class="btn-num-product-up color1 flex-c-m size7 bg8 eff2">
-                                <i class="fs-12 fa fa-plus" aria-hidden="true"></i>
-                            </button>
+                        <div>
+                            <a href="{% url 'item_decrement' value.product_id %}"><button>
+                                <i class="fs-12 fa fa-minus colour" aria-hidden="true"></i>
+                            </button></a>
+                            
+                            <span class="column-3 quantity">{{value.quantity}}</span>
+                            
+                            <a href="{% url 'item_increment' value.product_id %}"><button>
+                                <i class="fs-12 fa fa-plus colour" aria-hidden="true"></i>
+                            </button></a>
+                            
                         </div>
                     </td>
-                    <td class="column-5">₹ {{ value.price|multiply:value.quantity }}</td>
+                    <td class="column-5">₹ {{ value.price | multiply:value.quantity | intcomma }}</td>
                 </tr>
                 {% endfor %}
             </table>
         </div>
     </div>
 
+    <div class="bo8">
 
-
-
-<div class="flex-w flex-sb-m p-t-25 p-b-25 bo8 p-l-35 p-r-60 p-lr-15-sm">
-    <div class="flex-w flex-m w-full-sm">
-        <div class="size12 trans-0-4 m-t-10 m-b-10 m-r-10">
-            <!-- Button -->
-            <a href="{% url 'cart_clear' %}"><button class="flex-c-m sizefull bg1 bo-rad-23 hov1 s-text1 trans-0-4">
-                Clear Cart
-            </button></a>
+        <div class="total-amount p-t-25 column-1">
+            <span>₹ {{ total | intcomma }}.0</span>
         </div>
-    </div>
-</div>
 
-<!-- Total -->
-<div class="bo9 w-size18 p-l-40 p-r-40 p-t-30 p-b-38 m-t-30 m-r-0 m-l-auto p-lr-15-sm">
-    <h5 class="m-text20 p-b-24">
-        Cart Totals
-    </h5>
+        <div class="flex-sb-m p-b-25 p-r-25 p-t-10">
+            <div class="size12">
+                <a href="{% url 'cart_clear' %}"><button type="button" class="btn btn-outline-dark">
+                   <span class="cart">Clear Cart</span> 
+                </button></a>
+            </div>
 
-    <!--  -->
-    <div class="flex-w flex-sb-m p-b-12">
-        <span class="s-text18 w-size19 w-full-sm">
-            Subtotal:
-        </span>
-
-        <span class="m-text21 w-size20 w-full-sm">
-            ₹39.00
-        </span>
-    </div>
-
-    <!--  -->
-    <div class="flex-w flex-sb bo10 p-t-15 p-b-20">
-        <span class="s-text18 w-size19 w-full-sm">
-            Shipping:
-        </span>
-
-        <div class="w-size20 w-full-sm">
-            <p class="s-text8 p-b-23">
-                We provide free delivery for all our customers. Please double check your address, or contact us if you need any help.
-            </p>
+            <div>
+                <form action="{% url 'checkout' %}">
+                    <button type='submit' class="btn btn-outline-dark form-control">
+                        Checkout
+                    </button>
+                </form>
+            </div>
         </div>
+               
     </div>
-
-    <!--  -->
-    <div class="flex-w flex-sb-m p-t-26 p-b-30">
-        <span class="m-text22 w-size19 w-full-sm">
-            Total:
-        </span>
-
-        <span class="m-text21 w-size20 w-full-sm">
-            ₹39.00
-        </span>
-    </div>
-
-    <div class="size15 trans-0-4">
-        <!-- Button -->
-        <form action="{% url 'checkout' %}">
-            <button type='submit' class="flex-c-m sizefull bg1 bo-rad-23 hov1 s-text1 trans-0-4">
-                Proceed to Checkout
-            </button>
-        </form>
-        
-    </div>
-</div>
 </div>
 </section>
 
-
-
-<div class="bg6 flex-w p-b-90" style="padding: 0% 20%;">
-
-    <div class="w-size7 p-t-30 p-l-15 p-r-15 respon4">
-        <h4 class="s-text12 p-b-30">
-            Categories
-        </h4>
-
-        <ul>
-            <li class="p-b-9">
-                <a href="#" class="s-text7">
-                    Earphones
-                </a>
-            </li>
-
-            <li class="p-b-9">
-                <a href="#" class="s-text7">
-                    Laptops
-                </a>
-            </li>
-
-            <li class="p-b-9">
-                <a href="#" class="s-text7">
-                    Smartphones
-                </a>
-            </li>
-
-            <li class="p-b-9">
-                <a href="#" class="s-text7">
-                    Accessories
-                </a>
-            </li>
-        </ul>
+<!-- <div class="flex-w flex-sb-m p-t-25 p-b-25 bo8 p-r-20 p-lr-15-sm">
+    <div class="flex-w flex-m w-full-sm">
+        <div class="size12 trans-0-4 m-t-10 m-b-10 m-r-10">
+           
+            <a href="{% url 'cart_clear' %}"><button type="button" class="btn btn-outline-dark">
+               <span class="cart">Clear Cart</span> 
+            </button></a>
+        </div>
+           
     </div>
+    <div class="flex-w flex-m w-full-sm">
+      
+        <br>
+        <form action="{% url 'checkout' %}">
+            <button type='submit' class="btn btn-outline-dark form-control">
+                Checkout
+            </button>
+        </form>
+        </div>
+           
+    </div> -->
+    
+    
 
 
 
-    <div class="w-size7 p-t-30 p-l-15 p-r-15 respon4" >
-        <h4 class="s-text12 p-b-30">
-            Help
-        </h4>
-
-        <ul>
-            <li class="p-b-9">
-                <a href="#" class="s-text7">
-                    Track Order
-                </a>
-            </li>
-
-            <li class="p-b-9">
-                <a href="#" class="s-text7">
-                    Returns
-                </a>
-            </li>
-
-            <li class="p-b-9">
-                <a href="#" class="s-text7">
-                    Shipping
-                </a>
-            </li>
-
-            <li class="p-b-9">
-                <a href="#" class="s-text7">
-                    FAQs
-                </a>
-            </li>
-        </ul>
-    </div>
-</div>
 <!--===============================================================================================-->
 <script src="js/main.js"></script>
 
