--- a/main/static/css/accounts.css
+++ b/main/static/css/accounts.css
@@ -30,7 +30,7 @@ a:focus {
 
 a:hover {
     text-decoration: none;
-  color: #fff;
+  color: #080808;
 }
 
 /*---------------------------------------------*/
