--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -49,7 +49,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav nav-center">
           <li class="nav-item">
-            <a class="nav-link" href="#about">About</a>
+            <a class="nav-link" href="http://127.0.0.1:8000/#about">About</a>
           </li>
           <li 
           {% if 'products' == request.path %}
