--- a/main/templates/home/index.html
+++ b/main/templates/home/index.html
@@ -58,7 +58,7 @@
 		
 				<div class="block2-txt p-t-20">
 					<a href="{% url 'product' product.id %}" class="block2-name dis-block s-text3 p-b-5 index_a">
-						{{ product.name }}
+						<span>{{ product.name }}</span>
 					</a>
 					
 					<span class="block2-price m-text6 p-r-5">
